--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
 * {
   outline: none;
 }
+
+::-webkit-scrollbar {
+  width: 0;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: transparent;
+}
