--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,72 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+  user-select: none;
+  outline: 0;
+}
+
+.app {
+  display: grid;
+  grid-template-areas:
+    "top right"
+    "bottom right"
+    "footer footer";
+  grid-template-columns: 3fr 7fr;
+  grid-template-rows: 3fr 8fr 1fr;
+  gap: 0.5rem;
+  padding: 0.5rem;
+
+  > * {
+    border: 1px black solid;
+  }
+
+  > .top {
+    grid-area: top;
+  }
+
+  > .bottom {
+    grid-area: bottom;
+  }
+
+  > .right {
+    grid-area: right;
+  }
+
+  > .footer {
+    grid-area: footer;
+  }
+}
+
+.loader {
+  width: 15px;
+  aspect-ratio: 1;
+  display: grid;
+  -webkit-mask: conic-gradient(from 15deg, #0000, #000);
+  animation: l26 1s infinite steps(12);
+}
+.loader,
+.loader:before,
+.loader:after {
+  background:
+    radial-gradient(closest-side at 50% 12.5%, #f03355 96%, #0000) 50% 0/20% 80%
+      repeat-y,
+    radial-gradient(closest-side at 12.5% 50%, #f03355 96%, #0000) 0 50%/80% 20%
+      repeat-x;
+}
+.loader:before,
+.loader:after {
+  content: "";
+  grid-area: 1/1;
+  transform: rotate(30deg);
+}
+.loader:after {
+  transform: rotate(60deg);
+}
+
+@keyframes l26 {
+  100% {
+    transform: rotate(1turn);
+  }
+}
